--- a/promo-timeline-app/src/styles.css
+++ b/promo-timeline-app/src/styles.css
@@ -14,6 +14,7 @@
  .header {
      display: flex;
      justify-content: space-evenly;
+     align-items: center;
      margin: 10px;
      min-height: 30px;
  }
@@ -146,8 +147,15 @@
  }
 
  /* Make sure the filter containers are properly spaced */
+ .filter-block{
+padding: 8px;
+background-color: #FFCC02;
+border-radius: 5px;
+ }
+
  .filter-container {
-     margin-right: 20px;
+     margin-right: 5px;
+     margin-left: 5px;
      display: inline-block;
  }
 
