--- a/promo-timeline-app/src/styles.css
+++ b/promo-timeline-app/src/styles.css
@@ -744,7 +744,10 @@ border-radius: 5px;
      max-height: 100px;
      height: fit-content;
  }
-
+ .fivelogo {
+     max-height: 160px;
+     height: fit-content;
+ }
 .promo-td {
   position: relative;
   height: 120px; /* force row height */
