--- a/promo-timeline-app/src/styles.css
+++ b/promo-timeline-app/src/styles.css
@@ -770,7 +770,43 @@ border-radius: 5px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   animation: fadeIn 0.6s ease-in-out forwards;
   opacity: 0;
-}
+}  
+
+.promo-box-red {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  color: white;
+  background: linear-gradient(90deg, #ff0707, #e71313);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  border-radius: 100px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  animation: fadeIn 0.6s ease-in-out forwards;
+  opacity: 0;
+} 
+
+.promo-box-orange {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  color: white;
+  background: linear-gradient(90deg, #ff9100, #f19318);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  border-radius: 100px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  animation: fadeIn 0.6s ease-in-out forwards;
+  opacity: 0;
+} 
 
 @keyframes fadeIn {
   from {
